# Biblia-CLI

./: .env.example  .gitignore  LICENSE  README.md  admin_annotations.py  app_render.py  cargar_anotaciones.py  config.toml  fix_config.py  local_files.txt  main.py  push_output.txt  pyproject.toml  remote_files.txt  requirements.txt  serve.py  setup_supabase.sql  status.txt  status_v2.txt  status_v3.txt
.github/workflows/: keep_alive.yml
biblia_cli/: annotations.py  app.py  book_names.py  cache.py  config.py  daily_reading.py  favorites.py  main.py  notes.py  overrides.py  pipe_mode.py  settings.py  themes.py
biblia_cli/agent/: __init__.py  graph.py  nodes.py  runner.py  state.py
biblia_cli/api/: bolls_client.py
biblia_cli/css/: app.tcss
biblia_cli/widgets/: annotation_modal.py  daily_selection_modal.py  favorites_modal.py  note_modal.py  override_modal.py  search_modal.py  splash_screen.py  translation_modal.py
